generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum InvoiceStatus {
  DRAFT
  PENDING
  PAID
  OVERDUE
  CANCELLED
}

model User {
  id        String     @id @default(cuid())
  name      String?
  email     String     @unique
  password  String
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  customers Customer[]
}

model Customer {
  id        String    @id @default(cuid())
  name      String
  email     String
  phone     String?
  address   String?
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId    String
  invoices  Invoice[]
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt

  // Unicidad por inquilino: cada usuario no puede repetir email entre sus clientes
  @@unique([userId, email])
}

model Invoice {
  id            String        @id @default(cuid())
  invoiceNumber String        @unique
  customerId    String
  customer      Customer      @relation(fields: [customerId], references: [id], onDelete: Cascade)
  issueDate     DateTime
  dueDate       DateTime?
  status        InvoiceStatus @default(DRAFT)
  items         InvoiceItem[]
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt
}

model InvoiceItem {
  id          String   @id @default(cuid())
  invoiceId   String
  invoice     Invoice  @relation(fields: [invoiceId], references: [id], onDelete: Cascade)
  description String
  quantity    Int
  unitPrice   BigInt @db.BigInt // <-- CORREGIDO: Usamos BigInt para precisión
  taxRate     Float    @default(0)
 
  // CAMPOS DE CÁLCULO FIJOS PARA LA ESTRATEGIA
  subtotal    BigInt @db.BigInt // <-- NUEVO CAMPO MONETARIO EN BIGINT
  taxAmount   BigInt @db.BigInt // <-- NUEVO CAMPO MONETARIO EN BIGINT
  total       BigInt @db.BigInt // <-- NUEVO CAMPO MONETARIO EN BIGINT
 
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}